Bug 223627 - ANGLE Metal fixes for program generation bugs
Summary: ANGLE Metal fixes for program generation bugs
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: ANGLE (show other bugs)
Version: WebKit Nightly Build
Hardware: All Unspecified
: P2 Minor
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks: anglemetal
  Show dependency treegraph
 
Reported: 2021-03-23 00:31 PDT by Kyle Piddington
Modified: 2021-03-23 13:00 PDT (History)
7 users (show)

See Also:


Attachments
Patch (44.51 KB, patch)
2021-03-23 00:33 PDT, Kyle Piddington
no flags Details | Formatted Diff | Diff
Patch (44.49 KB, patch)
2021-03-23 08:49 PDT, Kyle Piddington
ews-feeder: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kyle Piddington 2021-03-23 00:31:09 PDT
The following three tests hit debug assertions when generating programs, and produce invalid programs on release.
webgl/2.0.0/conformance2/glsl3/texture-offset-uniform-texture-coordinate.html
webgl/2.0.0/conformance/glsl/bugs/compound-assignment-type-combination.html
webgl/2.0.0/conformance/glsl/bugs/complex-glsl-does-not-crash.html
Comment 1 Kyle Piddington 2021-03-23 00:33:22 PDT
Created attachment 423993 [details]
Patch
Comment 2 EWS Watchlist 2021-03-23 00:34:22 PDT
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Comment 3 Jon Lee 2021-03-23 00:48:31 PDT
Comment on attachment 423993 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=423993&action=review

> Source/ThirdParty/ANGLE/src/compiler/translator/TranslatorMetalDirect/ProgramPrelude.cpp:3562
> +            }

missing break?
Comment 4 Kyle Piddington 2021-03-23 08:49:32 PDT
Created attachment 424021 [details]
Patch
Comment 5 EWS 2021-03-23 11:23:06 PDT
Committed r274884: <https://commits.webkit.org/r274884>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 424021 [details].
Comment 6 Radar WebKit Bug Importer 2021-03-23 11:24:13 PDT
<rdar://problem/75746599>