ANGLE Metal fixes for program generation bugs https://bugs.webkit.org/show_bug.cgi?id=223627

Patch by Kyle Piddington <kpiddington@apple.com> on 2021-03-23
Reviewed by Dean Jackson.

   webgl/2.0.0/conformance2/glsl3/texture-offset-uniform-texture-coordinate.html is fixed by dropping 'thread' qualifiers on pregenerated functions
   webgl/2.0.0/conformance/glsl/bugs/compound-assignment-type-combination.html is fixed by introducing new operators for matrix +/- scalars
   webgl/2.0.0/conformance/glsl/bugs/complex-glsl-does-not-crash.html is fixed by adding a pre-pass to rename any reserved keywords, such as 'vertex'

* src/compiler/translator/TranslatorMetalDirect/EmitMetal.cpp:
(BuildExternalAttributeIndexMap):
* src/compiler/translator/TranslatorMetalDirect/ProgramPrelude.cpp:
* src/compiler/translator/TranslatorMetalDirect/RewriteKeywords.cpp:
(sh::Rewriter::maybeCreateNewName):
(sh::Rewriter::visitSymbolPost):
(sh::Rewriter::predefineName):
(sh::RewriteKeywords):

Canonical link: https://commits.webkit.org/235662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274884 268f45cc-cd09-0410-ab3c-d52691b4dbfc